reworked subsections on feature scaling

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -7207,11 +7207,11 @@
    "source": [
     "# STEP 4: Preprocess the dataset for training\n",
     "\n",
-    "In this step the dataset is prepared for the actual classification by SVC. Depending on the selected ML algorithm as well as the data structure, it may be necessary to prepare the data before training (e.g., by **standardization**, **normalization**, or **discretization** to bin the data based on thresholds). Furthermore, errors in the dataset (e.g. **data gaps**, **duplicates** or obvious **misentries**) should be corrected now at the latest.\n",
+    "In this step the dataset is prepared for the actual classification by SVC. Depending on the selected ML algorithm as well as the data structure, it may be necessary to prepare the data before training (e.g., by **standardization**, **normalization**, or **discretization** to cluster the data based on thresholds). Furthermore, errors in the dataset (e.g. **data gaps**, **duplicates** or obvious **misentries**) should be corrected now at the latest.\n",
     "\n",
     "## Heal the dataset\n",
     "\n",
-    "Through the intensive exploration of the data in ([STEP 2: Explore the ML dataset](#STEP-2:-Explore-the-ML-dataset)), we know that special **preparation** of the data is **not necessary**. The values are **complete and without gaps** and there are **no duplicates**."
+    "Through the intensive exploration of the data (see [STEP 2: Explore the ML dataset](#STEP-2:-Explore-the-ML-dataset)), we know that special **preparation** of the data is **not necessary**. The values of the dataset are **complete and without gaps** and there are **no duplicates**."
    ]
   },
   {
@@ -7227,9 +7227,9 @@
     "\n",
     "**Distance-based algorithms** such as the **Support Vector Classifier (SVC)** explained in [STEP 3](#STEP-3:-Choose-and-create-the-ML-model), or others such as [K-Nearest Neighbors (KNN)](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm) and [K-means clustering](https://en.wikipedia.org/wiki/K-means_clustering) are most affected by the **bandwidth of features**. This is because **distances between data points** are used in the algorithm to determine their **similarity** (see <cite data-cite=\"feature_scaling_2020\">Bhandari, 2020</cite>).\n",
     "\n",
-    "If **features** in the dataset have very **different magnitudes (scales)**, the features with the larger scale could be **weighted** more prominently by the ML algorithm. This **tendency** would lead to **bias** in training, which negatively affects **generizability** in classifying test data (see <cite data-cite=\"techflare_2020\">techflare, 2020</cite>). Therefore, the **features** in the dataset should be **scaled** before distance-based ML algorithms are used. Only by **adjusting the data ranges** is it possible to ensure that **all features contribute equally** to the classification result.\n",
+    "If **features** in the dataset have very **different ranges (scales)**, the features with the larger scale could be **weighted** more prominently by the ML algorithm. This **tendency** would lead to **bias** in training, which negatively affects **generizability** in classifying test data. Therefore, the **features** in the dataset should be **scaled** before distance-based ML algorithms are used. Only by **adjusting the data ranges** it is possible to ensure that **all features contribute equally** to the classification result.\n",
     "\n",
-    "The following two subsections explain the two main methods for scaling **Normalization** and **Standardization**. The question often arises as to when one or the other should be used, so here are a few hints:\n",
+    "The following two subsections explain the two main methods for scaling: **Normalization** and **Standardization**. The question often arises as to when one or the other should be used, so here are a few hints:\n",
     "\n",
     "- **Normalization** is useful when the distribution of the data **does not** follow a **Gaussian normal distribution**. This can be helpful for algorithms that do not assume normally distributed data, such as K-Nearest Neighbors and neural networks. However, **outliers** in the data have **major influence** on the **mean** (not to be mistaken with the median) used for calculation. Therefore, normalization is significantly **more vulnerable to outliers** than standardization.\n",
     "- The **standardization**, on the other hand, can be helpful in cases where the data follow a **Gaussian normal distribution**. However, this does not necessarily have to be true. Also, unlike normalization, standardization does not have a limited range of values. However, standardization is significantly **less prone to outliers** in the data than normalization.\n",
@@ -7242,11 +7242,13 @@
     "\n",
     "For further details about **Standardization** and **Normalization** read here:\n",
     "\n",
-    "scikit-learn:  \n",
+    "scikit-learn:\n",
+    "\n",
     "- [Preprocessing data](https://scikit-learn.org/stable/modules/preprocessing.html)\n",
     "- [Compare the effect of different scalers on data with outliers](https://scikit-learn.org/stable/auto_examples/preprocessing/plot_all_scaling.html#sphx-glr-auto-examples-preprocessing-plot-all-scaling-py)\n",
     "\n",
-    "Others:  \n",
+    "Others:\n",
+    "\n",
     "- [What are standarization and normalization? Test with iris data set in Scikit-learn](http://techflare.blog/what-are-standarization-and-normalization-test-with-iris-data-set-in-scikit-learn/)\n",
     "- [Feature Scaling for Machine Learning: Understanding the Difference Between Normalization vs. Standardization](https://www.analyticsvidhya.com/blog/2020/04/feature-scaling-machine-learning-normalization-standardization/?)\n",
     "- [Feature scaling](https://en.wikipedia.org/wiki/Feature_scaling)\n",
@@ -7281,7 +7283,7 @@
     "\n",
     "$$X' = \\frac{X - X_{min}}{X_{max} - X_{min}}$$\n",
     "\n",
-    "Thereby $X_{max}$ and $X_{min}$ are the maximum and the minimum value of the feature, respectively.\n",
+    "Thereby $X_{max}$ and $X_{min}$ are the maximum and the minimum values of the feature, respectively.\n",
     "\n",
     "- If the value of $X$ is the **minimum value** of the feature, the numerator in the fraction becomes 0. Thus, $X' = 0$.\n",
     "- If the value of $X$ is the **maximum value** of the feature, the numerator becomes equal to the denominator of the fraction. Then the value of $X' = 1$.\n",
@@ -10122,7 +10124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.6"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
