reworked sections '4.4. Identify anomalies in the datasets' and '8. STEP 6: Evaluate model's performance' as well as related TODOs removed

--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -718,4 +718,14 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords = {URL},
 }
 
+@Online{cross_val_score_2022,
+  author   = {Stephen Allwright},
+  date     = {2022-06-26},
+  title    = {Using cross{\_}val{\_}score in sklearn, simply explained},
+  url      = {https://stephenallwright.com/cross_val_score-sklearn/},
+  language = {English},
+  urldate  = {2022-10-18},
+  keywords = {URL},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
